--- a/.github/workflows/android-ci-cd.yml
+++ b/.github/workflows/android-ci-cd.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: test-reports
-          path: 'build/reports/tests/'
+          path: '**/build/reports/tests/'
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
