--- a/.github/workflows/android-ci-cd.yml
+++ b/.github/workflows/android-ci-cd.yml
@@ -24,6 +24,7 @@ jobs:
         run: |
           chmod +x gradlew
           ./gradlew assembleRelease
+          ./gradlew assembleDebug
           ./gradlew test
 
       - name: Test reports
