--- a/.github/workflows/android-ci-cd.yml
+++ b/.github/workflows/android-ci-cd.yml
@@ -27,6 +27,7 @@ jobs:
           ./gradlew assembleDebug
           ./gradlew test
           ./gradlew lint
+          ./gradle jacocoTestReport
 
       - name: Test reports
         if: ${{ always() }}
@@ -40,6 +41,12 @@ jobs:
         with:
           name: lint-reports
           path: app/build/reports/lint-results-debug.html
+
+      - name: Jacoco reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: jacoco-reports
+          path: app/build/reports/coverage/androidTest/debug/connected/index.html
 
       - name: Upload debug APK
         uses: actions/upload-artifact@v4
